<resources>
    <string name="app_name">Reiceitas App</string>

    <string name="appId">6ac28980</string>
    <string name="appKey">5443b0900f2ec4b050ac04c63a39aae7</string>

    <string name="s_descricao_img_fundo_login">Imagem de uma pizza usada como fundo da tela</string>
    <string name="s_requestIdTokenGoogle">359831614848-39crbsfo5kuj40nn5eh2oifsotu5nrat.apps.googleusercontent.com</string>
    <string name="s_lista_receitas_categoria">Categoria</string>
    <string name="s_lista_receita_nome">Nome</string>
    <string name="s_img_receita">Foto da recipe</string>
    <string name="s_acessar_site">Acesse o Site</string>
    <string name="s_ingredientes">INGREDIENTES</string>
    <string name="s_modo_preparo">MODO DE PREPARO</string>
    <string name="s_busca">Busca</string>
    <string name="s_sair">Sair</string>
    <string name="s_conta">Conta</string>
    <string name="s_favoritos">Receitas Favoritas</string>
    <string name="s_porcoes">Quantidade de Porções</string>
    <string name="s_tempo_total">Tempo Total de Preparo</string>
    <string name="s_sem_conexao">Sem conexão com a internet</string>
    <string name="s_yummly">Yummly</string>
    <string name="s_sobre">Informações da API</string>


    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


</resources>
