<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_favoritos"
            android:icon="@drawable/ic_action_star_yellow"
            android:title="@string/s_favoritos" />
    </group>

    <item android:title="@string/s_conta">
        <menu>
            <item
                android:id="@+id/menu_sair"
                android:icon="@drawable/ic_action_acount_logout"
                android:title="@string/s_sair" />
        </menu>
    </item>
    <item android:title="@string/s_yummly">
        <menu>
            <item
                android:id="@+id/menu_info"
                android:icon="@drawable/ic_action_info"
                android:title="@string/s_sobre" />
        </menu>
    </item>


</menu>
