<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.DetalhesActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/colorBackgroundDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_acessar_site"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBackground"
        android:fontFamily="sans-serif-medium"
        android:text="@string/s_acessar_site"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="70dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_det_receita"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/s_img_receita"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fundo" />

            <TextView
                android:id="@+id/tv_det_nome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_det_categorias"
                app:layout_constraintStart_toStartOf="@+id/tv_det_categorias"
                app:layout_constraintTop_toBottomOf="@+id/tv_det_categorias" />

            <TextView
                android:id="@+id/tv_det_categorias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_det_receita"
                app:layout_constraintStart_toStartOf="@+id/iv_det_receita"
                app:layout_constraintTop_toBottomOf="@+id/iv_det_receita" />

            <TextView
                android:id="@+id/tv_ingredientes_static"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/s_ingredientes"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_det_nome"
                app:layout_constraintStart_toStartOf="@+id/tv_det_nome"
                app:layout_constraintTop_toBottomOf="@+id/tv_det_nome" />

            <TextView
                android:id="@+id/tv_ingredientes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorBackgroundCaixaTexto"
                android:elevation="5dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="5dp"
                android:padding="15dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_ingredientes_static"
                app:layout_constraintStart_toStartOf="@+id/tv_ingredientes_static"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredientes_static" />

            <Button
                android:id="@+id/b_voltar_fav"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_action_back_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/ib_favorito"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_action_star_border_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>